--- a/canonical/UBT_coding_fingerprint.tex
+++ b/canonical/UBT_coding_fingerprint.tex
@@ -11,9 +11,6 @@ Coding Layers, Ontological Equivalence, and Observable Fingerprints}
 \begin{document}
 \maketitle
 
-
-The spectral organization employed here mirrors the symmetry-based state counting familiar from atomic quantum systems; a structural interpretation is discussed in Appendix~D.
-
 \section*{Axiom O1: Ontological Equivalence}
 
 \textbf{Axiom O1 (Ontological Equivalence).}
@@ -137,5 +134,10 @@ stabilization layers beyond its geometric core. The minimal fingerprint
 presented here is intentionally conservative and falsifiable. Future
 work will explore alternative coding realizations and higher-order
 fingerprints.
+
+\paragraph{Interpretative Clarification.}
+Throughout this document, the multipole index $\ell$ is treated as a symmetry label,
+analogous to an orbital quantum number in atomic physics. This identification is
+structural and does not imply any literal atomic dynamics.
 
 \end{document}
