--- a/canonical/appendix_universe_as_atom.tex
+++ b/canonical/appendix_universe_as_atom.tex
@@ -79,3 +79,10 @@ From this perspective, the cosmic microwave background is not a spatial image bu
 The atomic analogy is mathematical and structural rather than literal. UBT does not assert that the universe obeys atomic dynamics, but that both systems share symmetry-based organization of states.
 
 This framework generalizes quantum mechanics without modifying its core principles.
+
+\paragraph{Canonical Scope.}
+The arguments in this appendix are structural and symmetry-based.
+No claim is made here about the numerical derivation of specific physical constants
+or particle properties. Interpretative extensions connecting information-theoretic
+stability to concrete constants or masses are intentionally deferred to the
+\texttt{SPECULATIVE} section.
