--- a/canonical/appendix_universe_as_atom.tex
+++ b/canonical/appendix_universe_as_atom.tex
@@ -86,3 +86,16 @@ No claim is made here about the numerical derivation of specific physical consta
 or particle properties. Interpretative extensions connecting information-theoretic
 stability to concrete constants or masses are intentionally deferred to the
 \texttt{SPECULATIVE} section.
+
+
+
+\section{Geometric interface: latent torus vs.\ observed sphere}
+\label{sec:geom_interface}
+
+UBT uses a latent toroidal phase space (e.g.\ $T^8$) to organize internal periodic degrees of freedom, while
+cosmological observables are fields on the celestial sphere $S^2$. The bridge is an observation/projection operator
+$\mathcal{P}$ that maps a latent field $\Theta(\theta)$ to a spherical field $T(\hat n)$; see
+Sec.~\ref{sec:torus_to_sphere} for a compact template (Hopf-like mapping and mode-mixing
+$a_{\ell m}=\sum_k M_{\ell m}(k)c_k$). This separation is essential: the code layer need not manifest as a spatial lattice,
+and is most naturally tested in the spectral domain.
+
